add spark transform

--- a/notebooks/match_transform_pd.ipynb
+++ b/notebooks/match_transform_pd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,8 @@
        "      <th>Date</th>\n",
        "      <th>Stage</th>\n",
        "      <th>Round</th>\n",
+       "      <th>TeamOneName</th>\n",
+       "      <th>TeamTwoName</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -56,17 +58,22 @@
        "      <td>2025-02-21</td>\n",
        "      <td>Group Stage</td>\n",
        "      <td>Week 2</td>\n",
+       "      <td>Zerance Mint</td>\n",
+       "      <td>BLVKHVND</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              Event        Date        Stage   Round\n",
-       "0  Game Changers 2025 EMEA: Stage 1  2025-02-21  Group Stage  Week 2"
+       "                              Event        Date        Stage   Round  \\\n",
+       "0  Game Changers 2025 EMEA: Stage 1  2025-02-21  Group Stage  Week 2   \n",
+       "\n",
+       "    TeamOneName TeamTwoName  \n",
+       "0  Zerance Mint    BLVKHVND  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,12 +99,14 @@
     "#event_stats_df\n",
     "\n",
     "event_stats_df = pd.DataFrame(data[list(data.keys())[0]][0], index=[0])\n",
+    "event_stats_df['TeamOneName'] = team1_name\n",
+    "event_stats_df['TeamTwoName'] = team2_name\n",
     "event_stats_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +211,7 @@
        "2              9             2              9  "
       ]
      },
-     "execution_count": 169,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,8 +227,8 @@
     "    team1_stats = data[match_name][1][i]['Team Stats: '][team1_name]\n",
     "    team2_stats = data[match_name][1][i]['Team Stats: '][team2_name]\n",
     "\n",
-    "    team1_score = team1_stats['final']\n",
-    "    team2_score = team2_stats['final']\n",
+    "    team1_score = int(team1_stats['final'])\n",
+    "    team2_score = int(team2_stats['final'])\n",
     "\n",
     "    winner = team1_name if team1_score > team2_score else team2_name\n",
     "\n",
@@ -232,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +446,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
