load.py now can load all dataframes
adding first part to fully integrate all three scripts as well.

--- a/notebooks/match_transform_spark.ipynb
+++ b/notebooks/match_transform_spark.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
     "# Function that gets team stats for each map in the match\n",
     "def get_team_map_data(match_name, map_list, data):\n",
     "\n",
-    "    map_team_stats_df = pd.DataFrame(columns = ['map', 'team_name', 'win' ,'final_score', 'defense_score' ,'attack_score', 'overtime_score'])\n",
+    "    map_team_stats_df = pd.DataFrame(columns = ['map_name', 'team_name', 'win' ,'final_score', 'defense_score' ,'attack_score', 'overtime_score'])\n",
     "\n",
     "    for i in map_list:\n",
     "\n",
@@ -183,8 +183,8 @@
     "            team2_win = True\n",
     "\n",
     "\n",
-    "        team1_dict = {'map' : [i], 'team_name' : [team1_name], 'win' : [team1_win], 'final_score' : [team1_stats['final']], 'defense_score' : [team1_stats['CT']], 'attack_score' : [team1_stats['T']], 'overtime_score' : [team1_stats['OT']]}\n",
-    "        team2_dict = {'map' : [i], 'team_name' : [team2_name], 'win' : [team2_win], 'final_score' : [team2_stats['final']], 'defense_score' : [team2_stats['CT']], 'attack_score' : [team2_stats['T']], 'overtime_score' : [team2_stats['OT']]}\n",
+    "        team1_dict = {'map_name' : [i], 'team_name' : [team1_name], 'win' : [team1_win], 'final_score' : [team1_stats['final']], 'defense_score' : [team1_stats['CT']], 'attack_score' : [team1_stats['T']], 'overtime_score' : [team1_stats['OT']]}\n",
+    "        team2_dict = {'map_name' : [i], 'team_name' : [team2_name], 'win' : [team2_win], 'final_score' : [team2_stats['final']], 'defense_score' : [team2_stats['CT']], 'attack_score' : [team2_stats['T']], 'overtime_score' : [team2_stats['OT']]}\n",
     "\n",
     "        team1_df = pd.DataFrame(team1_dict)\n",
     "        team2_df = pd.DataFrame(team2_dict)\n",
@@ -395,6 +395,15 @@
     "def get_map_player_data(map_list, team_name_abbr_dict, data, match_name):\n",
     "\n",
     "    map_player_stats_df_pd = pd.DataFrame(columns=['map', 'player_name', 'agent', 'team_name', 'acs_overall','acs_attack', 'acs_defense', 'kills_overall', 'kills_attack', 'kills_defense',  'deaths_overall', 'deaths_attack', 'deaths_defense', 'assists_overall', 'assists_attack', 'assists_defense', 'kast_overall', 'kast_attack', 'kast_defense', 'adr_overall', 'adr_attack', 'adr_defense', 'headshot_percentage_overall', 'headshot_percentage_attack', 'headshot_percentage_defense', 'first_kills_overall', 'first_kills_attack', 'first_kills_defense', 'first_deaths_overall', 'first_deaths_attack', 'first_deaths_defense'])\n",
+    "\n",
+    "    map_player_stats_df_pd['kast_overall'] = map_player_stats_df_pd['kast_overall'].str.replace('%', '').astype(float)\n",
+    "    map_player_stats_df_pd['kast_defense'] = map_player_stats_df_pd['kast_defense'].str.replace('%', '').astype(float)\n",
+    "    map_player_stats_df_pd['kast_attack'] = map_player_stats_df_pd['kast_attack'].str.replace('%', '').astype(float)\n",
+    "    map_player_stats_df_pd['headshot_percentage_overall'] = map_player_stats_df_pd['headshot_percentage_overall'].str.replace('%', '').astype(float)\n",
+    "    map_player_stats_df_pd['headshot_percentage_defense'] = map_player_stats_df_pd['headshot_percentage_defense'].str.replace('%', '').astype(float)\n",
+    "    map_player_stats_df_pd['headshot_percentage_attack'] = map_player_stats_df_pd['headshot_percentage_attack'].str.replace('%', '').astype(float)\n",
+    "\n",
+    "\n",
     "\n",
     "    for i in map_list:\n",
     "        map_name = i\n",
